default/nextcloud/base/nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud-server
  name: nextcloud-server
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: nextcloud-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud-server
    spec:
      containers:
      - name: nextcloud-server
        image: nextcloud
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 4Gi
          requests:
            cpu: 2000m
            memory: 4Gi
        volumeMounts:
          - name: html
            mountPath: /var/www/html
      volumes:
        - name: html
          hostPath:
            path: /data/k8sdata/default/nextcloud/html
      restartPolicy: Always
