default/nextcloud/base/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud-server
  name: nextcloud-server
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: nextcloud-server
